tests/fail/fail_pal_move_locked.stderr
error[E0440]: Cannot move 'p' while it is borrowed
 --> tests/fail/fail_pal_move_locked.tk:15:15
   |
 15 |     auto ^q = ^p
   |               ^
